prectice-projects-2 2nd  commit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Image/Copyright-Symbol-R-PNG-Image.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -12,7 +15,12 @@
 <body>
     <header>
         <div class="main-header">
-            <div class="chilled-header"></div>
+            <div class="chilled-header">
+                <h1>All Thinks Are Possible If You believe
+                </h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button>Contacts Us</button>
+            </div>
         </div>
     </header>
     <main></main>
