prectice-projects-2 3th commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -23,7 +24,24 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="main-banner">
+            <div class="chilled-banner">
+                <img height="700px" src="./Image/person.png" alt="">
+            </div>
+            <div class="chilled-banner">
+                <h1>My failures of <br> previous year</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li><span><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.</li>
+                    <li><span><i class="fa-solid fa-check"></i></span> Contrary to popular belief.</li>
+                    <li><span><i class="fa-solid fa-check"></i></span> Contrary to popular , is not simply.</li>
+                    <li><span><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.</li>
+                    <li><span><i class="fa-solid fa-check"></i></span> Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 
